Création d'un builder pour simplifier les création d'objet